--- a/index.html
+++ b/index.html
@@ -12,6 +12,7 @@
         <a href="wwr/">Rafting Website</a>
         <a href="wwr/site-plan-rafting.html">Rafting Site Plan</a>
       </nav>
+      <link rel="stylesheet" href="styles/styles.css">
     </header>
     <main>
       <h1>Cris Altman | WDD130</h1>
