--- a/index.html
+++ b/index.html
@@ -3,9 +3,9 @@
   <head>
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width,initial-scale=1.0">
-    <title>Cris Altman | WDD130</title>
+    <title>Cris Altman | WDD 130</title>
     <meta name="description" content="Student home page for BYU Idaho">
-    <meta name="author=" content="Cris Altman">
+    <meta name="author" content="Cris Altman">
     <link rel="stylesheet" href="styles/styles.css">
   </head>
   <body>
