--- a/week02/box-model.html
+++ b/week02/box-model.html
@@ -1,11 +1,13 @@
-<!DOCTYPE html>
-<html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
-    <link rel="stylesheet" href="styles/box-model.css">    
-</head>
+<!doctype html>
+<html lang="en-US">
+  <head>
+    <meta charset="utf-8">
+    <meta name="viewport" content="width=device-width,initial-scale=1.0">
+    <title>Cris Altman | Box Model Assignment</title>
+    <meta name="description" content="Box Model Assignment for WDD 130">
+    <meta name="author" content="Cris Altman">
+    <link rel="stylesheet" href="styles/box-model.css">
+  </head>
 <body>
 <main>
 	<div class="callout">
@@ -21,5 +23,3 @@
 </main>
 </body>
 </html>
-
-
