added beginning of css to rafting site plan

--- a/wwr/site-plan-rafting.html
+++ b/wwr/site-plan-rafting.html
@@ -17,9 +17,15 @@
         <h2>Overview</h2>
 
         <h3>Purpose</h3>
-        <p></p>
+        <p>The purpose is to build an online presence to increase business revenue by encouraging individuals to learn more about our rafting company, the river trips we provide and the ability to book these trips online</p>
         <h3>Audience</h3>
-        <p></p>
+        <p>
+            Who are the target customers? Describe their life (or business) situation (age, financial situation, interests, and so on):
+                The target customers for this site are individuals looking for adventure.  These will often be people who enjoy outdoors activities such as camping, hiking, etc.  Financial situations will vary across participants, although they will often come from situations with more disposable income, but could also include college age students, families, church youth groups.
+            What do they expect to find or what questions will be answered by them accessing the website?
+                The target customer will be expecting to find information about the locations, equipment needed and cost of trips.  They will also want the opportunity to book online.
+            How will my audience usually access my site (desktop, laptop, mobile device)?  All devices, probably mobile devices & laptops most frequently.
+        </p>
 
         <h2>Branding</h2>
 
@@ -27,9 +33,7 @@
         <img src="images/logo.png" alt="Rafting Site Logo">
 
         <h2>Style Guide</h2>
-
-        <h3>Color Palette</h3>
-        <p></p>
+        </p>
         <h3>Typography</h3>
         <h4>Headings Example Font</h4>
         <h4>Normal Text/Paragraph Example Font</h4>
