add color palette to html

--- a/wwr/site-plan-rafting.html
+++ b/wwr/site-plan-rafting.html
@@ -34,6 +34,8 @@
 
         <h2>Style Guide</h2>
         <p></p>
+        <h3>Color Palette</h3>
+        <p></p>
         <h3>Typography</h3>
         <h4>Headings Example Font</h4>
         <h4>Normal Text/Paragraph Example Font</h4>
