create about page

--- a/wwr/about.html
+++ b/wwr/about.html
@@ -6,7 +6,7 @@
     <title>Rafting Site Plan About | Cris Altman</title>
     <meta name="description" content="About page for Rafting Site Plan">
     <meta name="author" content="Cris Altman">
-    <link rel="stylesheet" href="styles/site-plan-rafting.css"> 
+    <link rel="stylesheet" href="styles/rafting.css"> 
 </head>
 <body>
     <header>
@@ -19,10 +19,38 @@
           </nav>
     </header>
     <main>
-            
+        <div class="hero">
+            <h1>Roaring Rapids Whitewater Rafting</h1>
+            <img src="images/hero.jpg" alt="White Water Rafting" width="200">
+        <article>
+            <img src="images/happy-client.png" alt="Happy client" width="200">
+            <p>
+                Lorem ipsum dolor sit, amet consectetur adipisicing elit. Fugit, veniam sequi adipisci consectetur facilis nam omnis obcaecati saepe laboriosam reiciendis vitae consequuntur quam ex qui dolorem est velit? Eos, voluptatibus.
+            </p>
+        </article>
+        </div>
+        <section>
+            <h2>History</h2>
+            <p>
+                Lorem ipsum dolor, sit amet consectetur adipisicing elit. Est, fugiat alias. Laudantium tempora rem, perspiciatis optio mollitia consequatur tempore facilis rerum! Libero numquam dolor obcaecati unde veritatis aliquid adipisci iure!
+            </p>
+        </section>
+        <section>
+            <h2>Adventure Awaits You!</h2>
+            <img src="images/image1.jpg" alt="On the river" width="200">
+            <img src="images/image2.jpg" alt="Heading into the rapids" width="200">
+            <img src="images/image3.jpg" alt="Taking on the rapids" width="200">
+            <img src="images/image4.jpg" alt="Neearing the end" width="200">
+            <img src="images/image5.jpg" alt="Conquered the rapids" width="200">
+        </section>
     </main>
-    <footer>
-
+    <footer class="social">
+        <p>
+            ©️2024 Roaring Rapids Whitewater Rafting 🚣‍♀️ Cris Altman 🚣‍♀️
+            <a href="http://www.facebook.com" target="_blank">Facebook</a>
+            <a href="http://www.instagram.com" target="_blank">Instagram</a>
+            <a href="http://www.x.com" target="_blank">X</a>
+       </p>
     </footer>    
 </body>
 </html>
