--- a/wwr/site-plan-rafting.html
+++ b/wwr/site-plan-rafting.html
@@ -35,12 +35,18 @@
         <h2>Style Guide</h2>
         <p></p>
         <h3>Color Palette</h3>
-        <p></p>
+        <p>
+            Primary color: Federal Blue #0f084bff; <br>
+            Secondary color: White #ffffff; <br>
+            Accent color 1: Honolulu Blue #007cbeff; <br>
+            Accent color 2: Tea Green #d0fcb3ff; <br>
+            <a href="https://coolors.co/d0fcb3-ffffff-007cbe-0f084b" target="_blank" alt="Color Palette"></a>
+        </p>
         <h3>Typography</h3>
-        <h4>Headings Example Font</h4>
-        <h4>Normal Text/Paragraph Example Font</h4>
+        <h4>Headings Example Font: Sanchez</h4>
+        <h4>Normal Text/Paragraph Example Font: Sanchez</h4>
         <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Similique sed et aliquid dolorum doloremque necessitatibus ad laborum praesentium illum quaerat. Assumenda iure a ipsam! In nesciunt sed aliquam illo ex.</p>
-        <h4>Colored Callout Example Font</h4>
+        <h4>Colored Callout Example Font: Sanchez</h4>  
         <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Quam voluptates expedita suscipit aperiam nemo quasi dolor consequuntur aliquam quibusdam ducimus vel, ad rerum! Odit culpa accusantium, quas iste repudiandae quibusdam.</p>
         <h3>Navigation</h3>
         <nav>
