--- a/wwr/about.html
+++ b/wwr/about.html
@@ -12,7 +12,7 @@
     <header>
         <img src="images/logo.png" alt="Rafting Site Logo">
         <nav>
-            <a href="../index.html">Home</a>
+            <a href="index.html">Home</a>
             <a href="about.html">About</a>
             <a href="trips.html">Trips</a>
             <a href="contact.html">Contact</a>
@@ -20,9 +20,9 @@
     </header>
     <main>
         <div class="hero">
-            <h1>Roaring Rapids Whitewater Rafting</h1>
             <img src="images/hero.jpg" alt="White Water Rafting" width="200">
         <article>
+            <h1>Roaring Rapids Whitewater Rafting</h1>
             <img src="images/happy-client.png" alt="Happy client" width="200">
             <p>
                 Lorem ipsum dolor sit, amet consectetur adipisicing elit. Fugit, veniam sequi adipisci consectetur facilis nam omnis obcaecati saepe laboriosam reiciendis vitae consequuntur quam ex qui dolorem est velit? Eos, voluptatibus.
@@ -40,17 +40,19 @@
             <img src="images/image1.jpg" alt="On the river" width="200">
             <img src="images/image2.jpg" alt="Heading into the rapids" width="200">
             <img src="images/image3.jpg" alt="Taking on the rapids" width="200">
-            <img src="images/image4.jpg" alt="Neearing the end" width="200">
+            <img src="images/image4.jpg" alt="Nearing the end" width="200">
             <img src="images/image5.jpg" alt="Conquered the rapids" width="200">
         </section>
     </main>
-    <footer class="social">
+    <footer>
         <p>
             ©️2024 Roaring Rapids Whitewater Rafting 🚣‍♀️ Cris Altman 🚣‍♀️
-            <a href="http://www.facebook.com" target="_blank">Facebook</a>
-            <a href="http://www.instagram.com" target="_blank">Instagram</a>
-            <a href="http://www.x.com" target="_blank">X</a>
-       </p>
+        </p>
+        <nav class="social">
+            <a href="http://www.facebook.com"> <img src="images/facebook-icon.png" alt="Facebook"></a>
+            <a href="http://www.instagram.com"> <img src ="images/instagram-icon.png" alt="Instagram"></a>
+            <a href="http://www.x.com"> <img src="images/x-icon.png" alt="X"></a>
+        </nav>
     </footer>    
 </body>
 </html>
