--- a/wwr/about.html
+++ b/wwr/about.html
@@ -21,13 +21,13 @@
     <main>
         <div class="hero">
             <img src="images/hero.jpg" alt="White Water Rafting" width="200">
-        <article>
             <h1>Roaring Rapids Whitewater Rafting</h1>
-            <img src="images/happy-client.png" alt="Happy client" width="200">
-            <p>
-                Lorem ipsum dolor sit, amet consectetur adipisicing elit. Fugit, veniam sequi adipisci consectetur facilis nam omnis obcaecati saepe laboriosam reiciendis vitae consequuntur quam ex qui dolorem est velit? Eos, voluptatibus.
-            </p>
-        </article>
+            <article>
+                <p>
+                    Lorem ipsum dolor sit, amet consectetur adipisicing elit. Fugit, veniam sequi adipisci consectetur facilis nam omnis obcaecati saepe laboriosam reiciendis vitae consequuntur quam ex qui dolorem est velit? Eos, voluptatibus.
+                </p>
+                <img id="happy" src="images/happy-client.png" alt="Happy client" width="50">
+            </article>
         </div>
         <section>
             <h2>History</h2>
@@ -37,21 +37,21 @@
         </section>
         <section>
             <h2>Adventure Awaits You!</h2>
-            <img src="images/image1.jpg" alt="On the river" width="200">
-            <img src="images/image2.jpg" alt="Heading into the rapids" width="200">
-            <img src="images/image3.jpg" alt="Taking on the rapids" width="200">
-            <img src="images/image4.jpg" alt="Nearing the end" width="200">
-            <img src="images/image5.jpg" alt="Conquered the rapids" width="200">
+            <img src="images/image1.jpg" alt="On the river" width="500">
+            <img src="images/image2.jpg" alt="Heading into the rapids" width="500">
+            <img src="images/image3.jpg" alt="Taking on the rapids" width="500">
+            <img src="images/image4.jpg" alt="Nearing the end" width="500">
+            <img src="images/image5.jpg" alt="Conquered the rapids" width="500">
         </section>
     </main>
     <footer>
         <p>
-            ©️2024 Roaring Rapids Whitewater Rafting 🚣‍♀️ Cris Altman 🚣‍♀️
+            ©️2024 Roaring Rapids Whitewater Rafting 🚣‍♀️ Cris Altman
         </p>
         <nav class="social">
-            <a href="http://www.facebook.com"> <img src="images/facebook-icon.png" alt="Facebook"></a>
-            <a href="http://www.instagram.com"> <img src ="images/instagram-icon.png" alt="Instagram"></a>
-            <a href="http://www.x.com"> <img src="images/x-icon.png" alt="X"></a>
+            <a href="http://www.facebook.com" target = "_blank"> <img src="images/facebook-icon.png" alt="Facebook"></a>
+            <a href="http://www.instagram.com" target = "_blank"> <img src ="images/instagram-icon.png" alt="Instagram"></a>
+            <a href="http://www.x.com" target = "_blank"> <img src="images/x-icon.png" alt="X"></a>
         </nav>
     </footer>    
 </body>
