add flex & grid elements

--- a/wwr/about.html
+++ b/wwr/about.html
@@ -9,31 +9,45 @@
     <link rel="stylesheet" href="styles/rafting.css"> 
 </head>
 <body>
+    
     <header>
+        <div class="grid">
         <img src="images/logo.png" alt="Rafting Site Logo">
         <nav>
             <a href="index.html">Home</a>
             <a href="about.html">About</a>
             <a href="trips.html">Trips</a>
             <a href="contact.html">Contact</a>
-          </nav>
+        </nav>
+        </div>
     </header>
+    </div>
     <main>
         <div class="hero">
             <img src="images/hero.jpg" alt="White Water Rafting" width="200">
             <h1>Roaring Rapids Whitewater Rafting</h1>
-            <article>
+            <article>    
                 <img id="happy" src="images/happy-client.png" alt="Happy client" width="50">
                 <p>
                     Lorem ipsum dolor sit, amet consectetur adipisicing elit. Fugit, veniam sequi adipisci consectetur facilis nam omnis obcaecati saepe laboriosam reiciendis vitae consequuntur quam ex qui dolorem est velit? Eos, voluptatibus.
-                </p>
-            </article>
+                </p>            
         </div>
-        <section>
-            <h2>History</h2>
-            <p>
-                Lorem ipsum dolor, sit amet consectetur adipisicing elit. Est, fugiat alias. Laudantium tempora rem, perspiciatis optio mollitia consequatur tempore facilis rerum! Libero numquam dolor obcaecati unde veritatis aliquid adipisci iure!
-            </p>
+        <h2>History</h2>
+        <section class="flexbox-container">
+
+            <div class="history-box-one">
+                <p>
+                    Lorem ipsum dolor, sit amet consectetur adipisicing elit. Est, fugiat alias. Laudantium tempora rem, perspiciatis optio mollitia consequatur tempore facilis rerum! Libero numquam dolor obcaecati unde veritatis aliquid adipisci iure!
+                </p>
+            </div>
+            <div class="history-box-two">
+                <img src="images/history-image.jpg" alt="Looking down the river" width="200">
+            </div>
+            <div class="history-box-three">
+                <p>
+                    Lorem ipsum dolor sit amet, consectetur adipisicing elit. Quibusdam repudiandae doloribus reiciendis esse omnis pariatur consequuntur ab ducimus exercitationem rerum amet assumenda at eveniet nisi, magni iure cum. Reiciendis, velit.
+                </p>
+            </div>
         </section>
         <section>
             <h2>Adventure Awaits You!</h2>
