adjusted the adventure images

--- a/wwr/about.html
+++ b/wwr/about.html
@@ -34,7 +34,6 @@
         </div>
         <h2>History</h2>
         <section class="flexbox-container">
-
             <div class="history-box-one">
                 <p>
                     Lorem ipsum dolor, sit amet consectetur adipisicing elit. Est, fugiat alias. Laudantium tempora rem, perspiciatis optio mollitia consequatur tempore facilis rerum! Libero numquam dolor obcaecati unde veritatis aliquid adipisci iure!
@@ -49,13 +48,40 @@
                 </p>
             </div>
         </section>
+        <h2>Adventure Awaits You!</h2>
         <section>
-            <h2>Adventure Awaits You!</h2>
-            <img src="images/image1.jpg" alt="On the river" width="500">
-            <img src="images/image2.jpg" alt="Heading into the rapids" width="500">
-            <img src="images/image3.jpg" alt="Taking on the rapids" width="500">
-            <img src="images/image4.jpg" alt="Nearing the end" width="500">
-            <img src="images/image5.jpg" alt="Conquered the rapids" width="500">
+            <div class="flexbox-container-two">
+                <div class="adventure-one">
+                    <figure>
+                        <img src="images/image1.jpg" alt="Angosta Canyon Rapids" width="180">
+                        <figcaption>Angosta Rapids</figcaption>
+                    </figure>
+                </div>
+                <div class="adventure-two">
+                    <figure>
+                        <img src="images/image2.jpg" alt="Roaring Rapids" width="180">
+                        <figcaption>Roaring Rapids</figcaption>
+                    </figure>
+                </div>
+                <div class="adventure-three">
+                    <figure>
+                        <img src="images/image3.jpg" alt="Yellow Rapids" width="180">
+                        <figcaption>Yellow Rapids</figcaption>
+                    </figure>
+                </div>
+                <div class="adventure-four">
+                    <figure>
+                        <img src="images/image4.jpg" alt="Rolling Straits" width="180">
+                        <figcaption>Rolling Straits</figcaption>
+                    </figure>
+                </div>
+                <div class="adventure-five">
+                    <figure class="adventure-five">
+                        <img src="images/image5.jpg" alt="Rock Canyon" width="180">
+                        <figcaption>Grey Rock Canyon</figcaption>
+                    </figure>
+                </div>
+            </div>
         </section>
     </main>
     <footer>
