--- a/wwr/about.html
+++ b/wwr/about.html
@@ -21,7 +21,6 @@
         </nav>
         </div>
     </header>
-    </div>
     <main>
         <div class="hero">
             <img src="images/hero.jpg" alt="White Water Rafting" width="200">
@@ -30,10 +29,11 @@
                 <img id="happy" src="images/happy-client.png" alt="Happy client" width="50">
                 <p>
                     Lorem ipsum dolor sit, amet consectetur adipisicing elit. Fugit, veniam sequi adipisci consectetur facilis nam omnis obcaecati saepe laboriosam reiciendis vitae consequuntur quam ex qui dolorem est velit? Eos, voluptatibus.
-                </p>            
+                </p>
+            </article>         
         </div>
         <h2>History</h2>
-        <section class="flexbox-container">
+        <section class="flexbox-container-history">
             <div class="history-box-one">
                 <p>
                     Lorem ipsum dolor, sit amet consectetur adipisicing elit. Est, fugiat alias. Laudantium tempora rem, perspiciatis optio mollitia consequatur tempore facilis rerum! Libero numquam dolor obcaecati unde veritatis aliquid adipisci iure!
@@ -50,7 +50,7 @@
         </section>
         <h2>Adventure Awaits You!</h2>
         <section>
-            <div class="flexbox-container-two">
+            <div class="flexbox-container-adventure">
                 <div class="adventure-one">
                     <figure>
                         <img src="images/image1.jpg" alt="Angosta Canyon Rapids" width="180">
@@ -77,8 +77,8 @@
                 </div>
                 <div class="adventure-five">
                     <figure class="adventure-five">
-                        <img src="images/image5.jpg" alt="Rock Canyon" width="180">
-                        <figcaption>Grey Rock Canyon</figcaption>
+                        <img src="images/image5.jpg" alt="Rocky Ledge Canyon" width="180">
+                        <figcaption>Rocky Ledge Canyon</figcaption>
                     </figure>
                 </div>
             </div>
