--- a/index.html
+++ b/index.html
@@ -14,10 +14,11 @@
           <a href="#">Home</a>
           <a href="wwr/">Rafting Website</a>
           <a href="wwr/site-plan-rafting.html">Rafting Site Plan</a>
-          <a href="https://www.linkedin.com/in/crisaltman/">Linkedin profile</a>
-          <a href="https://www.facebook.com/cris.altman">Facebook profile</a>
+          <a href="https://www.linkedin.com/in/crisaltman/">Linkedin</a>
+          <a href="https://www.facebook.com/cris.altman">Facebook</a>
       </nav>
     </header>
+    <div class="grid">
     <main>
       <h1>Cris Altman | WDD 130</h1>
       <img src="images/profile.jpg" alt="Cris Altman" width="200">
@@ -26,7 +27,6 @@
         I have a 19 year old daughter studying at BYUI and living in Rexburg.  My two youngest children live at home, a 17 year old boy and a 14 year old daughter.
         I currently work in the Software Development field as a Software Quality Engineer for a company that specializes in E-Discovery solutions and software.  
         In my spare time, I enjoy playing board games like Ticket to Ride, Gizmos & Castles of Burgundy and refereeing soccer.  I joined the church as a convert during my first stint in college almost 30 years ago.
-        
       </p>
       <ul class="box">
         <li><a href="https://www.churchofjesuschrist.org/temples/details/kansas-city-missouri-temple?lang=eng" target="_blank">Kansas City</a></li>
@@ -41,6 +41,7 @@
         Kansas is a state in the midwestern United States.  It is home to the center point of the contiguous 48 states.  It is known for it's wheat production and rolling prairies.  The capitol of Kansas is Topeka and its largest city is Wichita.  Famous Kansans include Dwight D. Eisenhower and Amelia Earhart.
       </p>
     </aside>
+  </div>
     <footer>
       <p>
         ©️2024 🍒 Cris Altman ⚽ Kansas
