Personal home page: update footer icons

--- a/index.html
+++ b/index.html
@@ -44,7 +44,7 @@
   </div>
     <footer>
       <p>
-        ©️2024 🍒 Cris Altman ⚽ Kansas
+        ©️2024 ⚽ Cris Altman 🦬 Kansas
       </p>
     </footer>
   </body>
