--- a/quiz.html
+++ b/quiz.html
@@ -19,7 +19,7 @@
                 <input type="text" id="q1" name="q1"><br>
                
                 <label for="q2">2. Why did the Saints leave Missouri?</label><br>
-                <input type="textarea" id="q2" name="q2" rows="10" cols="30" placeholder="Enter your answer here"><br>    
+                <textarea id="q2" name="q2" rows="10" cols="30" placeholder="Enter your answer here"></textarea><br>    
                
                 <label for="q3">3. Select the location Brigham Young organized the First Presudency in 1847?</label><br>
                 <select id="q3" name="q3">
