update spelling on quiz

--- a/quiz.html
+++ b/quiz.html
@@ -21,7 +21,7 @@
                 <label for="q2">2. Why did the Saints leave Missouri?</label><br>
                 <textarea id="q2" name="q2" rows="10" cols="30" placeholder="Enter your answer here"></textarea><br>    
                
-                <label for="q3">3. Select the location Brigham Young organized the First Presudency in 1847?</label><br>
+                <label for="q3">3. Select the location Brigham Young organized the First Presidency in 1847?</label><br>
                 <select id="q3" name="q3">
                     <option value ="nauvoo">--Select--</option>
                     <option value ="nauvoo">Nauvoo, Illinois</option>
