contact page layout update

--- a/wwr/contact.html
+++ b/wwr/contact.html
@@ -22,23 +22,25 @@
     </header>
     <main>
         <h2>Contact Us</h2>
-        <p>Roaring Rapids Whitewater Rafting</p>
-        <p>267 Marina Rd, Frisco, CO 80424</p>
-        <p>(970) 555-1212</p>
-        <p>info@roaringrapids.com</p>
-        <div class="google-map"> 
-            <iframe src="https://www.google.com/maps/embed?pb=!1m16!1m12!1m3!1d6150.2963178632235!2d-106.08996436013676!3d39.578811130106246!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!2m1!1sriver%20rafting%20colorado!5e0!3m2!1sen!2sus!4v1711975231296!5m2!1sen!2sus" width="600" height="450" allowfullscreen="" loading="lazy" referrerpolicy="no-referrer-when-downgrade"></iframe>
-        </div>
-        <div class="form">
+        <div class="contact_info_grid">
+            <div class="google-map"> 
+                <iframe src="https://www.google.com/maps/embed?pb=!1m16!1m12!1m3!1d6150.2963178632235!2d-106.08996436013676!3d39.578811130106246!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!2m1!1sriver%20rafting%20colorado!5e0!3m2!1sen!2sus!4v1711975231296!5m2!1sen!2sus" width="450" height="300" allowfullscreen="" loading="lazy" referrerpolicy="no-referrer-when-downgrade"></iframe>
+                
+                <h3 class="contact-info-header">Roaring Rapids Whitewater Rafting</h3>
+                <p class="contact-info">267 Marina Rd, Frisco, CO 80424</p>
+                <p class="contact-info">(970) 555-1212</p>
+                <p class = "contact-info">info@roaringrapids.com</p>
+            </div>
             <form>
                 <fieldset>
-                    <legend><h2>Request More Information</h2></legend>
-                    <label for="q1">User Name</label><br>
+                    <legend><h2 class="form-title" >Request More Information</h2></legend>
+                    <label for="q1">Name:</label><br>
                     <input type="text" id="q1" name="q1"><br>
                     <br>
-                    <label for="useremail">What is your email address?</label><br>
+                    <label for="useremail">Email address:</label><br>
                     <input type="email" id="useremail" name="useremail"><br>
                     <br>
+                    <legend>Request Type:</legend>
                     <input type="radio" id="general" name="general" value="General Inquiry">
                     <label for="general">General Inquiry</label><br>
                     <input type="radio" id="reservation" name="reservation" value="Reservation">
@@ -46,8 +48,8 @@
                     <input type="radio" id="suggestion" name="suggestion" value="Suggestion">
                     <label for="suggestion">Website Suggestion</label><br>
                     <br>
-                    <label for="message">Message</label><br>
-                    <textarea id="message" name="message" rows="10" cols="30" placeholder="Type message "></textarea><br>
+                    <label for="message">Message:</label><br>
+                    <textarea id="message" name="message" rows="10" cols="45" placeholder="Type message "></textarea><br>
                     <br>
                     <label for="subscribe">Please subscribe me to the monthly newsletter</label>
                     <input type="checkbox" id="subscribe" name="subscribe"><br>
@@ -55,7 +57,6 @@
                     <button class="submit" type="button">Request Info</button>
                 </fieldset>
             </form>
-        </div>
     </main>
     <footer>
         <p>
