add employee images

--- a/wwr/contact.html
+++ b/wwr/contact.html
@@ -25,12 +25,15 @@
         <div class="contact_info_grid">
             <div class="google-map"> 
                 <iframe src="https://www.google.com/maps/embed?pb=!1m16!1m12!1m3!1d6150.2963178632235!2d-106.08996436013676!3d39.578811130106246!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!2m1!1sriver%20rafting%20colorado!5e0!3m2!1sen!2sus!4v1711975231296!5m2!1sen!2sus" width="450" height="300" allowfullscreen="" loading="lazy" referrerpolicy="no-referrer-when-downgrade"></iframe>
-                
+            </div>
+            <div>
                 <h3 class="contact-info-header">Roaring Rapids Whitewater Rafting</h3>
                 <p class="contact-info">267 Marina Rd, Frisco, CO 80424</p>
                 <p class="contact-info">(970) 555-1212</p>
                 <p class = "contact-info">info@roaringrapids.com</p>
             </div>
+        </div>
+        <div class="contact_form_grid">
             <form>
                 <fieldset>
                     <legend><h2 class="form-title" >Request More Information</h2></legend>
@@ -40,7 +43,7 @@
                     <label for="useremail">Email address:</label><br>
                     <input type="email" id="useremail" name="useremail"><br>
                     <br>
-                    <legend>Request Type:</legend>
+                    <label>Request Type:</label><br>
                     <input type="radio" id="general" name="general" value="General Inquiry">
                     <label for="general">General Inquiry</label><br>
                     <input type="radio" id="reservation" name="reservation" value="Reservation">
@@ -57,6 +60,27 @@
                     <button class="submit" type="button">Request Info</button>
                 </fieldset>
             </form>
+            <div class="employee">
+                <figure>
+                    <img src="images/nick2.jpg" alt="Nick" width="150">
+                    <figcaption>Nick, President & CEO</figcaption>
+                </figure>
+                <figure>
+                    <img src="images/alex.jpg" alt="Alex" width="150">
+                    <figcaption>Alex, Tour Operations</figcaption>
+                </figure>
+                <figure>
+                    <img src="images/andrea.jpg" alt="Andrea" width="150">
+                    <figcaption>Andrea, Customer Relations</figcaption>
+                </figure>
+                <figure>
+                    <img src="images/emily.jpg" alt="Emily" width="150">
+                    <figcaption>Emily, Business & Marketing</figcaption>
+                </figure>
+            </div>
+        </div>
+
+
     </main>
     <footer>
         <p>
