--- a/wwr/contact.html
+++ b/wwr/contact.html
@@ -82,14 +82,21 @@
         </div>
     </main>
     <footer>
+        <div class="Wireframe">
+            <a href="https://app.moqups.com/obY7Jr284Goh2YlOO0EBAf7CsiNQ7HkL/edit/page/ad64222d5#" Wireframe target = "_blank" alt="Wireframe">Wireframe</a>
+        </div>
+        <div>
         <p>
             ©️2024 Roaring Rapids Whitewater Rafting 🚣‍♀️ Cris Altman
         </p>
-        <nav class="social">
-            <a href="http://www.facebook.com" target = "_blank"> <img src="images/facebook-icon.png" alt="Facebook"></a>
-            <a href="http://www.instagram.com" target = "_blank"> <img src ="images/instagram-icon.png" alt="Instagram"></a>
-            <a href="http://www.x.com" target = "_blank"> <img src="images/x-icon.png" alt="X"></a>
-        </nav>
+        </div>
+        <div>
+            <nav class="social">
+                <a href="http://www.facebook.com" target = "_blank"> <img src="images/facebook-icon.png" alt="Facebook"></a>
+                <a href="http://www.instagram.com" target = "_blank"> <img src ="images/instagram-icon.png" alt="Instagram"></a>
+                <a href="http://www.x.com" target = "_blank"> <img src="images/x-icon.png" alt="X"></a>
+            </nav>
+        </div>
     </footer>    
 </body>
 </html>
