correct eval tool errors

--- a/wwr/contact.html
+++ b/wwr/contact.html
@@ -58,7 +58,7 @@
                     <label for="subscribe">Please subscribe me to the monthly newsletter</label>
                     <input type="checkbox" id="subscribe" name="subscribe"><br>
                     <br>
-                    <button class="submit" type="button">Request Info</button>
+                    <button class="submit" type="submit">Request Info</button>
                 </fieldset>
             </form>
             <div class="employee">
@@ -82,9 +82,7 @@
         </div>
     </main>
     <footer>
-        <div class="Wireframe">
-            <a href="https://app.moqups.com/obY7Jr284Goh2YlOO0EBAf7CsiNQ7HkL/edit/page/ad64222d5#" Wireframe target = "_blank" alt="Wireframe">Wireframe</a>
-        </div>
+        <a href="https://app.moqups.com/obY7Jr284Goh2YlOO0EBAf7CsiNQ7HkL/edit/page/ad64222d5#" target = "_blank" >Wireframe</a>
         <div>
         <p>
             ©️2024 Roaring Rapids Whitewater Rafting 🚣‍♀️ Cris Altman
