more eval tool corrections

--- a/wwr/contact.html
+++ b/wwr/contact.html
@@ -21,7 +21,7 @@
         </div>
     </header>
     <main>
-        <h2>Contact Us</h2>
+        <h1>Contact Us</h1>
         <div class="contact_info_grid">
             <div class="google-map"> 
                 <iframe src="https://www.google.com/maps/embed?pb=!1m16!1m12!1m3!1d6150.2963178632235!2d-106.08996436013676!3d39.578811130106246!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!2m1!1sriver%20rafting%20colorado!5e0!3m2!1sen!2sus!4v1711975231296!5m2!1sen!2sus" width="450" height="300" allowfullscreen="" loading="lazy" referrerpolicy="no-referrer-when-downgrade"></iframe>
@@ -58,7 +58,7 @@
                     <label for="subscribe">Please subscribe me to the monthly newsletter</label>
                     <input type="checkbox" id="subscribe" name="subscribe"><br>
                     <br>
-                    <button class="submit" type="submit">Request Info</button>
+                    <button class="request-info" type="request-info">Request Info</button>
                 </fieldset>
             </form>
             <div class="employee">
