final correction on eval tool

--- a/wwr/contact.html
+++ b/wwr/contact.html
@@ -58,7 +58,7 @@
                     <label for="subscribe">Please subscribe me to the monthly newsletter</label>
                     <input type="checkbox" id="subscribe" name="subscribe"><br>
                     <br>
-                    <button class="request" type="request">Request Info</button>
+                    <button class="request" type="submit">Request Info</button>
                 </fieldset>
             </form>
             <div class="employee">
