Update trips & add wireframes

--- a/wwr/contact.html
+++ b/wwr/contact.html
@@ -81,7 +81,7 @@
         </div>
     </main>
     <footer>
-        <a href="https://app.moqups.com/obY7Jr284Goh2YlOO0EBAf7CsiNQ7HkL/edit/page/ad64222d5#" target = "_blank" >Wireframe</a>
+        <a href="https://app.moqups.com/obY7Jr284Goh2YlOO0EBAf7CsiNQ7HkL/view/page/ad64222d5" target = "_blank" >Wireframe</a>
         <div>
         <p>
             ©️2024 Roaring Rapids Whitewater Rafting 🚣‍♀️ Cris Altman
