--- a/wwr/trips.html
+++ b/wwr/trips.html
@@ -115,6 +115,7 @@
         </div>
     </main>
     <footer>
+        <a href="https://app.moqups.com/obY7Jr284Goh2YlOO0EBAf7CsiNQ7HkL/view/page/a7e9191d3" target = "_blank" >Wireframe</a>
         <p>
             ©️2024 Roaring Rapids Whitewater Rafting 🚣‍♀️ Cris Altman
         </p>
