final updates before validation

--- a/wwr/trips.html
+++ b/wwr/trips.html
@@ -46,7 +46,7 @@
             </div>
             <div class="trip-four">
                 <p>
-                    The Roaring Rapids adventure provides a high intensity experience over a clustered grouping of rapids.  This is a guided trip designed for intermediate rafters.  This trip provides a high intensity experience
+                    The Roaring Rapids adventure provides a high intensity experience over a clustered grouping of rapids.  This is a guided trip designed for intermediate rafters.  This trip provides a high intensity experience.
                 </p>
             </div>
             <div class="trip-five">
@@ -57,8 +57,7 @@
             </div>
             <div class="trip-six">
                 <p>
-                    Lorem ipsum dolor, sit amet consectetur adipisicing elit. Debitis, eligendi quas labore modi fugit architecto voluptas quos nam voluptatem cupiditate, natus, aliquam quaerat possimus aspernatur ea doloremque ipsa quam dignissimos?
-                </p>
+                    Grueling course of rapids best for groups of experienced rafters. A beautiful lunch spot is sandwiched between two the two most intense sections of rapids on the river. Broken up with a nice lunch in a beautiful spot past the rapids.  .  This trip features the two most intense sections of rapids on the river.  This guided trip is ideal for those experienced rafters looking to challenge themselves.</p>
             </div>
         </div>
         <div>
@@ -96,7 +95,7 @@
                         <td id="blue">Rolling Straits</td>
                         <td>All</td>
                         <td>6-8 hrs</td>
-                        <td>Day long trip, good for all experience levels.  Provides a variety of experiences.  Broken up with a nice lunch in a beautiful spot past the rapids.</td>
+                        <td>Day long trip, good for all experience levels.  Provides a variety of experiences.</td>
                       </tr>
                     <tr>
                       <td id="blue">Roaring Rapids</td>
@@ -108,7 +107,7 @@
                         <td id="blue">Yellow Rapids</td>
                         <td>Experienced</td>
                         <td>4-6 hrs</td>
-                        <td>Grueling course of rapids best for groups of experienced rafters.  A beautiful lunch spot is sandwiched between two the two most intense sections of rapids on the river.</td>
+                        <td>Grueling course of rapids best for groups of experienced rafters.</td>
                       </tr>
                   </table>
             </div>
