Add call to action button to trips

--- a/wwr/trips.html
+++ b/wwr/trips.html
@@ -63,7 +63,8 @@
         <div>
             <article class="action-contact">    
                 <h2>Live the adventure!</h2>
-                <h3 class="home"> <a href="contact.html">Contact us today for information.</a></h3>
+                <button type="button">Contact Us</button>
+                <h3>For more information</h3>
             </article> 
             <div class="trip-table">
                 <table>
